version 1.5
	* Shorten the header shown when running Cobertura (Thanks
	  to Jarkko Viinamäki).

version 1.4
	* Fixed a bug that sometimes resulted in a
	  StringIndexOutOfBoundsException when running cobertura-report
	  (Thanks to Grzegorz Lukasik).
	* Fixed a bug where classes without coverage data ("N/A") were
	  not always sorted correctly in the HTML report (Thanks to
	  Olivier Parent).
	* Fixed a bug where the code complexity column would not always
	  sort correctly in locales that use a comma to split the decimal
	  part of the number (Thanks to Olivier Parent).
	* Show "N/A" in the branch column of the HTML report for classes
	  and packages that do not have any branches.

version 1.3
	* Increased speed of HTML reports by filtering the files read
	  in to determine cyclomatic complexity numbers on.
	* In the lower left pane of the HTML reports, classes are now
	  sorted only by their class name (instead of by their package
	  name plus class name).
	* Changed the format of the XML reports to something that
	  is hopefully easier to use and more natural.  This
	  unfortunately breaks backward compatability.
	* We're using a DTD for the XML reports now.  See
	  http://cobertura.sourceforge.net/xml/coverage-01.dtd
	* Added the ability to specify the location of the coverage
	  data files from the ant tasks and the command line.
	* More user-friendly error checking and reporting.

version 1.2
	* Fix a bug that caused the XML reports to be invalid XML
	  (they were missing the </package> tag).
	* Use Java 1.4 pattern matching and remove Jakarta ORO.

version 1.1
	* Fix a bug in the syntax highlighting code of the HTML report
	  generation.  Previously, the highlighting for single quotes
	  containing "\\" would not end correctly.
	* Check the third party jars into CVS using the correct CVS
	  substition flag (binary, not ASCII).
	* Temporary files created by the instrument ant task and merge
	  ant task are now deleted after the ant task finishes.