@@ -1,12 +1,13 @@
 Cobertura - http://cobertura.sourceforge.net/
 
 Copyright (C) 2003 jcoverage ltd.
+Copyright (C) 2005 Erik Dick          <erdick a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Mark Doliner       <thekingant a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Joakim Erdfelt     <joakim a.t erdfelt d.o.t net>
-Copyright (C) 2005 Jeremy Thomerson   <jthomerson a.t users d.o.t sourceforge d.o.t net>
-Copyright (C) 2005 Erik Dick          <erdick a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Grzegorz Lukasik   <hauserx a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Olivier Parent     <olivier-parent a.t users d.o.t sourceforge d.o.t net>
+Copyright (C) 2005 Mark Sinke         <marksinke a.t users d.o.t sourceforge d.o.t net>
+Copyright (C) 2005 Jeremy Thomerson   <jthomerson a.t users d.o.t sourceforge d.o.t net>
 
 Cobertura is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published
