@@ -36,4 +36,13 @@ public interface CoverageData
 
 	int getNumberOfValidLines();
 
+	/**
+	 * Warning: This is generally implemented as a
+	 * "shallow" merge.  For our current use, this
+	 * should be fine, but in the future it may make
+	 * sense to modify the merge methods of the
+	 * various classes to do a deep copy of the
+	 * appropriate objects.
+	 */
+	void merge(CoverageData coverageData);
 }
